[package]
name = "ehsm"
version = "0.1.0"
authors = ["Kobus Grobler <kobus.grobler@gmail.com>"]
edition = "2018"
description = "Rust integration library for libehsm"
homepage = "https://github.com/ellipticSecure/ehsm-rust"
repository = "https://github.com/ellipticSecure/ehsm-rust"
keywords = ["pkcs11", "cryptoki", "btc", "bip32"]
categories = ["cryptography", "hardware-support"]
license-file = "LICENSE"

[dependencies]
libloading = "0.5.2"
pkcs11 = "0.5.0"
bs58 = { version = "0.3.1", features = ["check"]}

[dev-dependencies]
hex = "0.4"
serial_test = "0.4.0"
serial_test_derive = "0.4.0"